tests/negative/test_unesc_raw_cn_asgn.orb
fnc main () () {
    eval (sym (a:(raw cn) \()));
    # b must be (raw cn)
    eval (sym (b \(\() ,a)));
    = b \();
};